//
// Copyright 2017 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package gnoi;

// Generic Layer 3 Protocol enumeration.
enum L3Protocol {
  UNSPECIFIED = 0;
  IPV4 = 1;
  IPV6 = 2;
}

// HashType defines the valid hash methods for data verification.  UNSPECIFIED
// should be treated an error.
message HashType {
  enum HashMethod {
    UNSPECIFIED = 0;
    SHA256 = 1;
    SHA512 = 2;
  }
  HashMethod method = 1;
  bytes hash = 2;
}

// OpenConfig path representation of the target.
// eg. /interfaces/interface[name=et-1/0/0]
message Path {
  repeated string elements = 1;
}
